descargo u2 y u3 de DWEC

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
-Diseño de Interfaces Web/Anime First Steps Recursos/anime_placeholder_480.mp4
+Diseño de Interfaces Web/Anime First Steps Recursos/*.mp4
+
+
+
